public/stylesheets/style.css
body {
  padding-top: 70px;
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  background: url('http://i.imgur.com/iDict9w.jpg') center center;
  background-size: cover;
  background-attachment: fixed;
  background-color: #464646;
}

a {
  color: #00B7FF;

}

.hover:hover {
	background: rgba(68, 78, 58, 0.4);
}

#welcome {
    padding-top: 3%;
    color: white;
    font-size: 1.5em;
    font-family: 'Oxygen', sans-serif;
}

.box {

    /*background: rgba(96, 75, 48, 0.5);
    background: rgba(212, 211, 211, 0.6);*/
    overflow: auto;
    background: rgba(212, 200, 188, 0.6);
    padding: 1.5%;
    -webkit-border-radius: 10px 10px 10px 10px;
    -moz-border-radius: 10px 10px 10px 10px;
    border-radius: 10px 10px 10px 10px;
}

h1 {
    /*font-family: Sarina;*/
    color: #BE9B77;
    font-size: 5em;
    letter-spacing: 0.4em;
}

h3 {
    color: white;
    font-family: 'Oxygen', sans-serif;
    margin-top: 0;
}

.birdName {
    color: white;
    font-family: 'Oxygen', sans-serif;
    padding-bottom: 1%;
    padding-top: 1%;
}

.navbar .duck {
    max-width: 50px;
    max-height: 50px;
    margin-top: -28%;
  margin-right: 10%;
}

#hero {
    text-align: center;
    margin-top: 16%;
    font-size: 2em;
}

.register, .login {
    margin-top: 20%;
    padding: 5% 5%;
    color: black;
    -webkit-border-radius: 10px 10px 10px 10px;
    -moz-border-radius: 10px 10px 10px 10px;
    border-radius: 10px 10px 10px 10px;
    background:rgba(142,142,143,0.3);
    -webkit-box-shadow: #4F4029 8px 8px 8px;
    -moz-box-shadow: #4F4029 8px 8px 8px; 
    box-shadow: #4F4029 8px 8px 8px;
}

.s-text {
    font-size: 1.5em;
}

.s-submit {
    color: black;
}

.thumbnail {
  height: 210px;
}

.thumbnailImage {
	min-height: 120px;
}

.modal-title {
    text-align: center;
    color: black;
    font-family: 'Oxygen', sans-serif;
}

h4 {
  /*padding: 50px;*/
  text-align: center;
  color: black;
  font-family: 'Oxygen', sans-serif;
}

#map {
  width: 500px;
  height: 400px;
  background-color: #CCC;
  float: none;
}

<!-- BELOW IS THE GEOCODING CODE STUFFS -->


/*html, body {
  height: 100%;
  margin: 0;
  padding: 0;
}*/

/*#floating-panel {
  position: absolute;
  top: 10px;
  left: 25%;
  z-index: 5;
  background-color: #fff;
  padding: 5px;
  border: 1px solid #999;
  text-align: center;
  font-family: 'Roboto','sans-serif';
  line-height: 30px;
  padding-left: 10px;
}*/



<!-- ABOVE IS THE GEOCODING CODE THINGY -->

